--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,3 @@
 ATLAS_URI="mongodb+srv://mamta:1234@mongo@cluster0.zgikl.mongodb.net/delivery?retryWrites=true&w=majority"
+RAZOR_PAY_KEY_ID = 'rzp_test_j4RMCvbgEZ2vZU'
+RAZOR_PAY_SECRET_KEY = 'IsI4dwa66E1oWHRRoQ4vgIaw'
