--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,9 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.11",
     "nodemon": "^2.0.6",
+    "razorpay": "^2.0.6",
+    "request": "^2.88.2",
+    "uuid": "^8.3.1",
     "validator": "^13.1.17"
   },
   "description": ""
