--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
+    "mapbox-gl": "^1.12.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
