--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,11 +15,14 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
+    "google-map-react": "^2.1.9",
+    "google-maps-react": "^2.0.6",
     "mapbox-gl": "^1.12.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.22",
+    "react-mapbox-gl": "^5.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
