--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.22",
+    "react-map-gl": "^5.2.10",
     "react-mapbox-gl": "^5.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
